--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9jtEoMlCN4edG93gkBdv5",
+      "authorship_tag": "ABX9TyOAGJVMXaG1kn7D2SmTy+8W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "F8TtMNs80KTM"
+        "id": "F8TtMNs80KTM",
+        "outputId": "5629c5fa-6c6e-497d-ceba-b63f33bf1345",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# @title Mount Google Colab\n",
@@ -60,12 +72,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "bW6Ldn-BZiQb"
-      },
-      "outputs": [],
       "source": [
         "# @title Audio Preprocessor\n",
         "import sys\n",
@@ -84,7 +90,7 @@
         "import tempfile\n",
         "import warnings\n",
         "import pyloudnorm as pyln\n",
-        "import subprocess  # Added missing import\n",
+        "import subprocess\n",
         "from dataclasses import dataclass\n",
         "\n",
         "# === 0. Dependency Check ===\n",
@@ -117,16 +123,16 @@
         "# === Audio Processing Configuration ===\n",
         "# @markdown ---\n",
         "# @markdown ## Input Settings\n",
-        "input_path = \"Paste your audio files directory here\"  # @param {type:\"string\"}\n",
-        "output_path = \"/content/drive/MyDrive/Audio Preprocessor/processed/dataset\"  # @param {type:\"string\"}\n",
+        "input_path = \"\"  # @param {type:\"string\"}\n",
+        "output_path = \"/content/audio_preprocessor\"\n",
         "\n",
         "# @markdown ---\n",
         "# @markdown ## Audio Format Settings\n",
-        "out_format = \"wav\"  # @param [\"wav\", \"mp3\", \"flac\", \"aiff\"]\n",
+        "out_format = \"mp3\"  # @param [\"wav\", \"mp3\", \"flac\", \"aiff\"]\n",
         "sample_rate = \"48000\"  # @param [\"16000\", \"41000\", \"48000\", \"96000\"]\n",
         "bit_depth = \"24\"  # @param [\"16\", \"24\", \"32\"]\n",
         "channels = \"mono\"  # @param [\"mono\", \"stereo\"]\n",
-        "mp3_bitrate = \"192k\"  # @param [\"128k\", \"192k\", \"320k\"]\n",
+        "mp3_bitrate = \"320k\"  # @param [\"128k\", \"192k\", \"320k\"]\n",
         "normalization_profile = \"Spotify\"  # @param [\"Spotify\", \"default\"]\n",
         "# Define platform-specific loudness targets\n",
         "profile_settings = {\n",
@@ -155,6 +161,10 @@
         "else:\n",
         "    print(\"[Info] Panning correction is disabled.\")\n",
         "\n",
+        "# @markdown ---\n",
+        "# @markdown ## Silence Trimming\n",
+        "apply_silence_trimming = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
+        "\n",
         "visualize = True  # @param {type:\"boolean\"}\n",
         "\n",
         "# @markdown ---\n",
@@ -162,6 +172,10 @@
         "segmentation = False  # @param {type:\"boolean\"}\n",
         "duration = 30  # @param {type:\"slider\", min:1, max:60, step:1}\n",
         "time_unit = \"Seconds\"  # @param [\"Milliseconds\", \"Seconds\", \"Minutes\", \"Hours\"]\n",
+        "\n",
+        "# @markdown ---\n",
+        "# @markdown ## Output Options\n",
+        "zip_output = \"No\"  # @param [\"Yes\", \"No\"]\n",
         "\n",
         "# === Auto Worker Configuration ===\n",
         "num_workers = max(1, min(cpu_count // 2, 4)) if use_cuda_global else max(1, min(cpu_count, 8))\n",
@@ -199,6 +213,7 @@
         "    duration_seconds: float\n",
         "    panning_correction: bool\n",
         "    mp3_bitrate: str\n",
+        "    apply_silence_trimming: bool\n",
         "\n",
         "cfg = Config(\n",
         "    sample_rate=int(sample_rate),\n",
@@ -218,7 +233,8 @@
         "        else duration * 3600\n",
         "    ),\n",
         "    panning_correction=panning_correction,\n",
-        "    mp3_bitrate=mp3_bitrate\n",
+        "    mp3_bitrate=mp3_bitrate,\n",
+        "    apply_silence_trimming=(apply_silence_trimming == \"Yes\")\n",
         ")\n",
         "\n",
         "def measure_loudness(y: np.ndarray, sr: int) -> dict:\n",
@@ -305,7 +321,7 @@
         "    if len(y_norm_mono) < min_len:\n",
         "        y_norm_mono_padded = np.pad(y_norm_mono, (0, min_len - len(y_norm_mono)), mode=\"constant\")\n",
         "    else:\n",
-        "        y_norm_mono_padded = y_norm_mono\n",
+        "        y_norm_mono_padded = y_norm\n",
         "    try:\n",
         "        final_lufs = meter.integrated_loudness(y_norm_mono_padded)\n",
         "        log_message_func(f\"[Normalize] Final LUFS: {final_lufs:.2f} LUFS\")\n",
@@ -718,16 +734,22 @@
         "    Compute and create export directory for a given file.\n",
         "    \"\"\"\n",
         "    if os.path.isdir(input_dir):\n",
+        "        # Get relative path while preserving directory structure\n",
         "        rel_path = os.path.relpath(file_path, input_dir)\n",
-        "        parts = rel_path.split(os.sep)\n",
-        "        volume_name = parts[0] if len(parts) > 1 else os.path.basename(input_dir)\n",
+        "        # Remove filename to get directory path\n",
+        "        rel_dir = os.path.dirname(rel_path)\n",
+        "        base_path = os.path.join(export, rel_dir)\n",
         "    else:\n",
-        "        volume_name = os.path.splitext(os.path.basename(input_dir))[0]\n",
-        "    volume_name = volume_name.replace(' ', '_')\n",
-        "    base_path = os.path.join(export, volume_name)\n",
+        "        # For single file input, use parent directory structure\n",
+        "        parent_dir = os.path.dirname(input_dir)\n",
+        "        rel_path = os.path.relpath(file_path, parent_dir)\n",
+        "        rel_dir = os.path.dirname(rel_path)\n",
+        "        base_path = os.path.join(export, rel_dir)\n",
+        "\n",
         "    if is_segmented:\n",
         "        file_name = os.path.splitext(os.path.basename(file_path))[0]\n",
         "        base_path = os.path.join(base_path, f\"{file_name}_segments\")\n",
+        "\n",
         "    os.makedirs(base_path, exist_ok=True)\n",
         "    return base_path\n",
         "\n",
@@ -798,9 +820,11 @@
         "        time_unit_local = params['time_unit']\n",
         "        normalize_audio_flag = params['normalize_audio']\n",
         "        panning_correction_flag = params['panning_correction']\n",
+        "        apply_silence_trimming_flag = params['apply_silence_trimming']\n",
         "\n",
         "        log_message(f\"[Info] Processing File: {file}\")\n",
         "        log_message(f\"[Info] Processing Device: {'GPU' if use_cuda else 'CPU'}\")\n",
+        "        log_message(f\"[Info] Silence Trimming: {'Enabled' if apply_silence_trimming_flag else 'Disabled'}\")\n",
         "\n",
         "        try:\n",
         "            y, sr = librosa.load(file, sr=sample_rate_val, mono=False)\n",
@@ -852,15 +876,23 @@
         "            log_message(f\"[Clipping] Detected {ratio:.2%} clipped → attenuating\")\n",
         "            y = attenuate_audio(y, use_cuda, device)\n",
         "\n",
-        "        y_proc, (pre, post, total_silence), (s_start, s_end) = process_silence(\n",
-        "            y, sr, use_cuda, device, log_message\n",
-        "        )\n",
-        "        log_message(\"\")\n",
-        "        log_message(\"[Silence] Trim Results:\")\n",
-        "        log_message(f\"  Start silence: {format_duration(pre)}\")\n",
-        "        log_message(f\"  End silence: {format_duration(post)}\")\n",
-        "        log_message(f\"  Total silence removed: {format_duration(total_silence)}\")\n",
-        "        file_results['total_silence'] = total_silence\n",
+        "        # Apply silence trimming only if enabled\n",
+        "        if apply_silence_trimming_flag:\n",
+        "            y_proc, (pre, post, total_silence), (s_start, s_end) = process_silence(\n",
+        "                y, sr, use_cuda, device, log_message\n",
+        "            )\n",
+        "            log_message(\"\")\n",
+        "            log_message(\"[Silence] Trim Results:\")\n",
+        "            log_message(f\"  Start silence: {format_duration(pre)}\")\n",
+        "            log_message(f\"  End silence: {format_duration(post)}\")\n",
+        "            log_message(f\"  Total silence removed: {format_duration(total_silence)}\")\n",
+        "            file_results['total_silence'] = total_silence\n",
+        "        else:\n",
+        "            y_proc = y\n",
+        "            s_start = 0\n",
+        "            s_end = len(y)\n",
+        "            file_results['total_silence'] = 0.0\n",
+        "            log_message(\"[Silence] Skipping silence trimming\")\n",
         "\n",
         "        if not normalize_audio_flag:\n",
         "            try:\n",
@@ -914,12 +946,12 @@
         "                log_message(f\"  Total segments: {len(segments)}\")\n",
         "                log_message(\"\")\n",
         "                log_message(\"[Summary] Processing:\")\n",
-        "                log_message(f\"  Total silence removed: {format_duration(total_silence)}\")\n",
+        "                log_message(f\"  Total silence removed: {format_duration(file_results['total_silence'])}\")\n",
         "                log_message(f\"  Total segments: {len(segments)}\")\n",
         "        else:\n",
         "            log_message(\"\")\n",
         "            log_message(\"[Summary] Processing:\")\n",
-        "            log_message(f\"  Total silence removed: {format_duration(total_silence)}\")\n",
+        "            log_message(f\"  Total silence removed: {format_duration(file_results['total_silence'])}\")\n",
         "            log_message(\"  Exporting single file\")\n",
         "\n",
         "        file_results['plot_data'] = {\n",
@@ -1015,7 +1047,8 @@
         "        'panning_correction': cfg.panning_correction,\n",
         "        'duration_seconds': cfg.duration_seconds,\n",
         "        'use_cuda': cfg.use_cuda,\n",
-        "        'device': cfg.device\n",
+        "        'device': cfg.device,\n",
+        "        'apply_silence_trimming': cfg.apply_silence_trimming\n",
         "    }\n",
         "\n",
         "    results = {}\n",
@@ -1161,6 +1194,13 @@
         "\n",
         "    if not any_segmentation_failed:\n",
         "        tqdm.write(f\"[Info] Processing complete! Processed {len(files)-len(failed_files)} file(s) successfully.\")\n",
+        "\n",
+        "    # Zip output if requested\n",
+        "    if zip_output == \"Yes\":\n",
+        "        zip_path = output_path + '.zip'\n",
+        "        shutil.make_archive(output_path, 'zip', output_path)\n",
+        "        tqdm.write(f\"[Info] Output zipped to: {zip_path}\")\n",
+        "\n",
         "    return results\n",
         "\n",
         "# === RUN TESTS + MAIN, then DISPLAY AUDIO PLAYERS ===\n",
@@ -1171,8 +1211,14 @@
         "for file, file_results in results.items():\n",
         "    for export_item in file_results['export_paths']:\n",
         "        print(\"▶\", export_item['path'])\n",
-        "        display(ipd.Audio(export_item['path']))\n"
-      ]
+        "        display(ipd.Audio(export_item['path']))"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "YbkV0PDyoJr5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
